@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V2.6.0 on Wed, 10 Mar 2010 12:25:38 +0100
+// Generated by Bisonc++ V2.5.1 on Tue, 09 Mar 2010 16:32:32 +0100
 
 // $insert class.ih
 #include "parser.ih"
